--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -94,8 +94,8 @@
                 </ul>
               </div>
               <div class="header__top__right__auth">
-                <a href="/siteuser/signup" class="d-inline pr-2"><i class="fa fa-user"></i> Sign up</a>
-                <a href="#" class="d-inline"><i class="fa fa-sign-in"></i> Login</a>
+                <a th:href="@{|/siteuser/register|}" class="d-inline pr-2"><i class="fa fa-user"></i> Sign up</a>
+                <a href="#" class="d-inline"><i class="fa fa-sign-in"></i> {Login}</a>
               </div>
             </div>
           </div>
