fix : layout error 404
css 안 먹던 오류 해결
siteuser/안에는 css 폴더가 없으므로 src속성 앞에 ../를 붙였음

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -33,7 +33,7 @@
     </div>
     <nav class="humberger__menu__nav mobile-menu">
       <ul>
-        <li class="active"><a href="./index.html">Home</a></li>
+        <li class="active"><a th:href="@{|/|}">Home</a></li>
         <li><a href="./shop-grid.html">Shop</a></li>
         <li><a href="#">Pages</a>
           <ul class="header__menu__dropdown">
@@ -85,7 +85,7 @@
                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
               </div>
               <div class="header__top__right__language">
-                <img src="img/language.png" alt="">
+                <img src="/img/language.png" alt="">
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
@@ -95,7 +95,7 @@
               </div>
               <div class="header__top__right__auth">
                 <a th:href="@{|/siteuser/register|}" class="d-inline pr-2"><i class="fa fa-user"></i> Sign up</a>
-                <a href="#" class="d-inline"><i class="fa fa-sign-in"></i> {Login}</a>
+                <a href="#" class="d-inline"><i class="fa fa-sign-in"></i> Login</a>
               </div>
             </div>
           </div>
@@ -106,13 +106,13 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="header__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a th:href="@{/}"><img src="/img/logo.png" alt=""></a>
           </div>
         </div>
         <div class="col-lg-6">
           <nav class="header__menu">
             <ul>
-              <li class="active"><a href="./index.html">Home</a></li>
+              <li class="active"><a th:href="@{/}">Home</a></li>
               <li><a href="./shop-grid.html">Shop</a></li>
               <li><a href="#">Pages</a>
                 <ul class="header__menu__dropdown">
