feat : fix navbar
네브바 메뉴, 햄버거 메뉴 이름 바꿈

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -34,16 +34,16 @@
     <nav class="humberger__menu__nav mobile-menu">
       <ul>
         <li class="active"><a th:href="@{|/|}">Home</a></li>
-        <li><a href="./shop-grid.html">Shop</a></li>
-        <li><a href="#">Pages</a>
+        <li><a href="./shop-grid.html">Assets</a></li>
+        <li><a href="#">Community</a>
           <ul class="header__menu__dropdown">
-            <li><a href="./shop-details.html">Shop Details</a></li>
-            <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-            <li><a href="./checkout.html">Check Out</a></li>
-            <li><a href="./blog-details.html">Blog Details</a></li>
+            <li><a href="./shop-details.html"></a></li>
+            <li><a href="./shoping-cart.html"></a></li>
+            <li><a href="./checkout.html"></a></li>
+            <li><a href="./blog-details.html"></a></li>
           </ul>
         </li>
-        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="./blog.html">Create Asset</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -113,16 +113,16 @@
           <nav class="header__menu">
             <ul>
               <li class="active"><a th:href="@{/}">Home</a></li>
-              <li><a href="./shop-grid.html">Shop</a></li>
-              <li><a href="#">Pages</a>
+              <li><a href="./shop-grid.html">Assets</a></li>
+              <li><a href="#">Community</a>
                 <ul class="header__menu__dropdown">
-                  <li><a href="./shop-details.html">Shop Details</a></li>
-                  <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                  <li><a href="./checkout.html">Check Out</a></li>
-                  <li><a href="./blog-details.html">Blog Details</a></li>
+                  <li><a href="./shop-details.html"></a></li>
+                  <li><a href="./shoping-cart.html"></a></li>
+                  <li><a href="./checkout.html"></a></li>
+                  <li><a href="./blog-details.html"></a></li>
                 </ul>
               </li>
-              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="./blog.html">Create Asset</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
