feat : add login function
로그인 기능 만듦

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -95,7 +95,7 @@
               </div>
               <div class="header__top__right__auth">
                 <a th:href="@{|/siteuser/register|}" class="d-inline pr-2"><i class="fa fa-user"></i> Sign up</a>
-                <a href="@{|/siteuser/login|}" class="d-inline"><i class="fa fa-sign-in"></i> Login</a>
+                <a th:href="@{|/siteuser/login|}" class="d-inline"><i class="fa fa-sign-in"></i> Login</a>
               </div>
             </div>
           </div>
