--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,25 +10,29 @@
 
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Log In</p>
 
-                <form class="mx-1 mx-md-4">
-
+                <form class="mx-1 mx-md-4" th:action="@{/siteuser/login}" method="post">
+                  <div th:if="${param.error}">
+                    <div class="alert alert-danger">
+                      사용자ID 또는 비밀번호를 확인해 주세요.
+                    </div>
+                  </div>
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                      <input type="text" id="form3Example1c" class="form-control" />
-                      <label class="form-label" for="form3Example1c">Email or Name</label>
+                      <input type="text" id="form3Example1c" class="form-control" name="username" />
+                      <label class="form-label" for="form3Example1c">Name</label>
                     </div>
                   </div>
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                      <input type="password" id="form3Example4c" class="form-control" />
+                      <input type="password" id="form3Example4c" class="form-control" name="password" />
                       <label class="form-label" for="form3Example4c">Password</label>
                     </div>
                   </div>
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg">Log In</button>
+                    <input type="submit" class="btn btn-primary btn-lg" value="Log in" />
                   </div>
 
                 </form>
@@ -47,4 +51,5 @@
     </div>
   </div>
 </section>
+
 </html>
