--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -33,17 +33,17 @@
     </div>
     <nav class="humberger__menu__nav mobile-menu">
       <ul>
-        <li class="active"><a href="./index.html">Home</a></li>
-        <li><a href="./shop-grid.html">Shop</a></li>
-        <li><a href="#">Pages</a>
+        <li class="active"><a th:href="@{|/|}">Home</a></li>
+        <li><a href="./shop-grid.html">Assets</a></li>
+        <li><a href="#">Community</a>
           <ul class="header__menu__dropdown">
-            <li><a href="./shop-details.html">Shop Details</a></li>
-            <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-            <li><a href="./checkout.html">Check Out</a></li>
-            <li><a href="./blog-details.html">Blog Details</a></li>
+            <li><a href="./shop-details.html"></a></li>
+            <li><a href="./shoping-cart.html"></a></li>
+            <li><a href="./checkout.html"></a></li>
+            <li><a href="./blog-details.html"></a></li>
           </ul>
         </li>
-        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="./blog.html">Create Asset</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -85,7 +85,7 @@
                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
               </div>
               <div class="header__top__right__language">
-                <img src="img/language.png" alt="">
+                <img src="/img/language.png" alt="">
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
@@ -94,8 +94,8 @@
                 </ul>
               </div>
               <div class="header__top__right__auth">
-                <a href="/siteuser/signup" class="d-inline pr-2"><i class="fa fa-user"></i> Sign up</a>
-                <a href="#" class="d-inline"><i class="fa fa-sign-in"></i> Login</a>
+                <a th:href="@{|/siteuser/register|}" class="d-inline pr-2"><i class="fa fa-user"></i> Sign up</a>
+                <a th:href="@{|/siteuser/login|}" class="d-inline"><i class="fa fa-sign-in"></i> Login</a>
               </div>
             </div>
           </div>
@@ -106,23 +106,23 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="header__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a th:href="@{/}"><img src="/img/logo.png" alt=""></a>
           </div>
         </div>
         <div class="col-lg-6">
           <nav class="header__menu">
             <ul>
-              <li class="active"><a href="./index.html">Home</a></li>
-              <li><a href="./shop-grid.html">Shop</a></li>
-              <li><a href="#">Pages</a>
+              <li class="active"><a th:href="@{/}">Home</a></li>
+              <li><a href="./shop-grid.html">Assets</a></li>
+              <li><a href="#">Community</a>
                 <ul class="header__menu__dropdown">
-                  <li><a href="./shop-details.html">Shop Details</a></li>
-                  <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                  <li><a href="./checkout.html">Check Out</a></li>
-                  <li><a href="./blog-details.html">Blog Details</a></li>
+                  <li><a href="./shop-details.html"></a></li>
+                  <li><a href="./shoping-cart.html"></a></li>
+                  <li><a href="./checkout.html"></a></li>
+                  <li><a href="./blog-details.html"></a></li>
                 </ul>
               </li>
-              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="./blog.html">Create Asset</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
