feat : update navbar
네브바 템플릿에 있던 거 기획한 거로 바꿈

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content">
-  <!-- Hero Section Begin -->
-  <section class="hero">
+   <!-- Hero Section Begin -->
+   <section class="hero">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
@@ -29,8 +29,8 @@
           <div class="hero__search">
             <div class="hero__search__form">
               <form action="#">
-                <div class="hero__search__categories">
-                  All Categories
+                <div class="hero__search__categories" id="">
+                  Asset
                   <span class="arrow_carrot-down"></span>
                 </div>
                 <input type="text" placeholder="What do yo u need?">
@@ -42,7 +42,7 @@
                 <i class="fa fa-phone"></i>
               </div>
               <div class="hero__search__phone__text">
-                <h5>+65 11.188.888</h5>
+                <h5>+82 10.3335.2182</h5>
                 <span>support 24/7 time</span>
               </div>
             </div>
@@ -524,5 +524,6 @@
       </div>
     </div>
   </section>
+  <!-- Blog Section End -->
   </div>
 </html> 
