--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -17,7 +17,7 @@
       </ul>
       <div class="header__cart__price">item: <span>$150.00</span></div>
     </div>
-    <div class="humberger__menu__widget">
+    <div class="humberger__menu__widget d-flex">
       <div class="header__top__right__language">
         <img src="img/language.png" alt="">
         <div>English</div>
@@ -28,22 +28,23 @@
         </ul>
       </div>
       <div class="header__top__right__auth">
-        <a href="#"><i class="fa fa-user"></i> Login</a>
+        <a th:href="@{|/siteuser/register|}" class="pl-4"><i class="fa fa-user"></i> Sign up</a>
+        <a th:href="@{|/siteuser/login|}" class="pl-4"><i class="fa fa-sign-in"></i> Login</a>
       </div>
     </div>
     <nav class="humberger__menu__nav mobile-menu">
       <ul>
-        <li class="active"><a th:href="@{|/|}">Home</a></li>
-        <li><a href="./shop-grid.html">Assets</a></li>
-        <li><a href="#">Community</a>
+        <li class="active"><a href="./index.html">Home</a></li>
+        <li><a href="./shop-grid.html">Shop</a></li>
+        <li><a href="#">Pages</a>
           <ul class="header__menu__dropdown">
-            <li><a href="./shop-details.html"></a></li>
-            <li><a href="./shoping-cart.html"></a></li>
-            <li><a href="./checkout.html"></a></li>
-            <li><a href="./blog-details.html"></a></li>
+            <li><a href="./shop-details.html">Shop Details</a></li>
+            <li><a href="./shoping-cart.html">Shoping Cart</a></li>
+            <li><a href="./checkout.html">Check Out</a></li>
+            <li><a href="./blog-details.html">Blog Details</a></li>
           </ul>
         </li>
-        <li><a href="./blog.html">Create Asset</a></li>
+        <li><a href="./blog.html">Blog</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -71,7 +72,7 @@
           <div class="col-lg-6 col-md-6">
             <div class="header__top__left">
               <ul>
-                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
+                <li><i class="fa fa-envelope"></i> khw33352182@gmail.com</li>
                 <li>Free Shipping for all Order of $99</li>
               </ul>
             </div>
@@ -85,11 +86,11 @@
                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
               </div>
               <div class="header__top__right__language">
-                <img src="/img/language.png" alt="">
+                <img src="img/language.png" alt="">
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
-                  <li><a href="#">Spanis</a></li>
+                  <li><a href="#">Korean</a></li>
                   <li><a href="#">English</a></li>
                 </ul>
               </div>
@@ -106,24 +107,17 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="header__logo">
-            <a th:href="@{/}"><img src="/img/logo.png" alt=""></a>
+            <a th:href="@{/}"><img src="img/logo.png" alt=""></a>
           </div>
         </div>
         <div class="col-lg-6">
           <nav class="header__menu">
             <ul>
               <li class="active"><a th:href="@{/}">Home</a></li>
-              <li><a href="./shop-grid.html">Assets</a></li>
-              <li><a href="#">Community</a>
-                <ul class="header__menu__dropdown">
-                  <li><a href="./shop-details.html"></a></li>
-                  <li><a href="./shoping-cart.html"></a></li>
-                  <li><a href="./checkout.html"></a></li>
-                  <li><a href="./blog-details.html"></a></li>
-                </ul>
-              </li>
+              <li><a href="./shop-grid.html">Shop</a></li>
+              <li><a href="#">Forum</a></li>
               <li><a href="./blog.html">Create Asset</a></li>
-              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="./contact.html">Inquire</a></li>
             </ul>
           </nav>
         </div>
@@ -143,5 +137,6 @@
     </div>
   </header>
   <!-- Header Section End -->
+
 
 </nav>
