--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
                 <form class="mx-1 mx-md-4" th:action="@{/siteuser/login}" method="post">
                   <div th:if="${param.error}">
                     <div class="alert alert-danger">
-                      사용자ID 또는 비밀번호를 확인해 주세요.
+                      Invalid username and password.
                     </div>
                   </div>
                   <div class="d-flex flex-row align-items-center mb-4">
