--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -27,9 +27,13 @@
           <li><a href="#">English</a></li>
         </ul>
       </div>
-      <div class="header__top__right__auth">
+      <div class="header__top__right__auth" sec:authorize="isAnonymous()">
         <a th:href="@{|/siteuser/register|}" class="pl-4"><i class="fa fa-user"></i> Sign up</a>
         <a th:href="@{|/siteuser/login|}" class="pl-4"><i class="fa fa-sign-in"></i> Login</a>
+      </div>
+      <div class="header__top__right__auth" sec:authorize="isAuthenticated()">
+        <a th:href="@{|/siteuser/register|}" class="pl-4"><i class="fa fa-user"></i> Profile</a>
+        <a th:href="@{|/siteuser/login|}" class="pl-4"><i class="fa fa-sign-in"></i> Sign out</a>
       </div>
     </div>
     <nav class="humberger__menu__nav mobile-menu">
@@ -94,9 +98,13 @@
                   <li><a href="#">English</a></li>
                 </ul>
               </div>
-              <div class="header__top__right__auth">
-                <a th:href="@{|/siteuser/register|}" class="d-inline pr-2"><i class="fa fa-user"></i> Sign up</a>
+              <div class="header__top__right__auth" sec:authorize="isAnonymous()">
+                <a th:href="@{|/siteuser/register|}" class="d-inline pr-2"><i class="fa fa-user-plus"></i> Sign up</a>
                 <a th:href="@{|/siteuser/login|}" class="d-inline"><i class="fa fa-sign-in"></i> Login</a>
+              </div>
+              <div class="header__top__right__auth" sec:authorize="isAuthenticated()">
+                <a th:href="@{|/siteuser/profile|}" class="d-inline pr-2"><i class="fa fa-user"></i> Profile</a>
+                <a th:href="@{|/siteuser/signout|}" class="d-inline"><i class="fa fa-sign-out"></i> Sign out</a>
               </div>
             </div>
           </div>
