feat : add temporary favicon
임시 파비콘 추가

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Ogani, unica, creative, html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ogani | Template</title>
+  <title>MetaCraft | AssetStore</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
@@ -21,6 +21,9 @@
   <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="../img/favicon.ico"/>
 </head>
 <body>
     <nav th:replace="~{navbar :: navbarFragment}"></nav>
