--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -8,7 +8,7 @@
   <div class="humberger__menu__overlay"></div>
   <div class="humberger__menu__wrapper">
     <div class="humberger__menu__logo">
-      <a href="#"><img src="img/logo.png" alt=""></a>
+      <a href="#"><img src="/img/logo.png" alt=""></a>
     </div>
     <div class="humberger__menu__cart">
       <ul>
@@ -19,7 +19,7 @@
     </div>
     <div class="humberger__menu__widget d-flex">
       <div class="header__top__right__language">
-        <img src="img/language.png" alt="">
+        <img src="/img/language.png" alt="">
         <div>English</div>
         <span class="arrow_carrot-down"></span>
         <ul>
@@ -32,8 +32,8 @@
         <a th:href="@{|/siteuser/login|}" class="pl-4"><i class="fa fa-sign-in"></i> Login</a>
       </div>
       <div class="header__top__right__auth" sec:authorize="isAuthenticated()">
-        <a th:href="@{|/siteuser/register|}" class="pl-4"><i class="fa fa-user"></i> Profile</a>
-        <a th:href="@{|/siteuser/login|}" class="pl-4"><i class="fa fa-sign-in"></i> Sign out</a>
+        <a th:href="@{|/siteuser/profile|}" class="pl-4"><i class="fa fa-user"></i> Profile</a>
+        <a th:href="@{|/siteuser/signout|}" class="pl-4"><i class="fa fa-sign-in"></i> Sign out</a>
       </div>
     </div>
     <nav class="humberger__menu__nav mobile-menu">
@@ -90,7 +90,7 @@
                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
               </div>
               <div class="header__top__right__language">
-                <img src="img/language.png" alt="">
+                <img src="/img/language.png" alt="">
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="header__logo">
-            <a th:href="@{/}"><img src="img/logo.png" alt=""></a>
+            <a th:href="@{/}"><img src="/img/logo.png" alt=""></a>
           </div>
         </div>
         <div class="col-lg-6">
