--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -88,7 +88,7 @@
 </section>
 
 <!-- Product Details Section Begin -->
-<section class="product-details spad">
+<section class="product-details spad pt-3">
   <div class="container">
       <div class="row">
           <div class="col-lg-12">
