--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -59,10 +59,10 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="breadcrumb__text">
-          <h2>Wishlist</h2>
+          <h2>Cart</h2>
           <div class="breadcrumb__option">
             <a th:href="@{/siteuser/profile}">Profile</a>
-            <span>Wishlist</span>
+            <span>Cart</span>
           </div>
         </div>
       </div>
