style : edit css
메인 색상을 녹색에서 푸른색으로 바꿈

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -129,7 +129,7 @@ ol {
 	right: 0;
 	height: 4px;
 	width: 80px;
-	background: #7fad39;
+	background: var(--darkblue);
 	content: "";
 	margin: 0 auto;
 }
@@ -167,7 +167,7 @@ ol {
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #7fad39;
+	background: var(--darkblue);
 	letter-spacing: 2px;
 }
 
@@ -189,7 +189,7 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #7fad39;
+	background: var(--darkblue);
 	border: none;
 }
 
@@ -460,7 +460,7 @@ ol {
 }
 
 .header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #7fad39;
+	color: var(--darkblue);
 }
 
 .header__menu ul li .header__menu__dropdown li a {
@@ -471,7 +471,7 @@ ol {
 }
 
 .header__menu ul li.active a {
-	color: #7fad39;
+	color: var(--darkblue);
 }
 
 .header__menu ul li:hover .header__menu__dropdown {
@@ -481,7 +481,7 @@ ol {
 }
 
 .header__menu ul li:hover>a {
-	color: #7fad39;
+	color: var(--darkblue);
 }
 
 .header__menu ul li:last-child {
@@ -535,7 +535,7 @@ ol {
 .header__cart ul li a span {
 	height: 13px;
 	width: 13px;
-	background: #7fad39;
+	background: var(--darkblue);
 	font-size: 10px;
 	color: #ffffff;
 	line-height: 13px;
@@ -598,7 +598,7 @@ ol {
 }
 
 .hero__categories__all {
-	background: #7fad39;
+	background: var(--darkblue);
 	position: relative;
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
@@ -711,7 +711,7 @@ ol {
 
 .hero__search__phone__icon {
 	font-size: 18px;
-	color: #7fad39;
+	color: var(--darkblue);
 	height: 50px;
 	width: 50px;
 	background: #f5f5f5;
@@ -749,7 +749,7 @@ ol {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 4px;
-	color: #7fad39;
+	color: var(--darkblue);
 }
 
 .hero__text h2 {
@@ -851,7 +851,7 @@ ol {
 	bottom: -2px;
 	width: 100%;
 	height: 2px;
-	background: #7fad39;
+	background: var(--darkblue);
 	content: "";
 	opacity: 0;
 }
@@ -899,8 +899,8 @@ ol {
 }
 
 .featured__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: var(--darkblue);
+	border-color: var(--darkblue);
 }
 
 .featured__item__pic__hover li:hover a i {
@@ -1335,8 +1335,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: var(--darkblue);
+	border-color: var(--darkblue);
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1534,7 +1534,7 @@ ol {
 }
 
 .filter__option span:hover {
-	color: #7fad39;
+	color: var(--darkblue);
 }
 
 .product__item {
@@ -1575,8 +1575,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: var(--darkblue);
+	border-color: var(--darkblue);
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1656,8 +1656,8 @@ ol {
 
 .product__pagination a:hover,
 .blog__pagination a:hover {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: var(--darkblue);
+	border-color: var(--darkblue);
 	color: #ffffff;
 }
 
@@ -2165,8 +2165,8 @@ ol {
 }
 
 .checkout__input__checkbox label input:checked~.checkmark {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: var(--darkblue);
+	border-color: var(--darkblue);
 }
 
 .checkout__input__checkbox label input:checked~.checkmark:after {
@@ -2393,7 +2393,7 @@ ol {
 }
 
 .blog__sidebar__item ul li a:hover {
-	color: #7fad39;
+	color: var(--darkblue);
 }
 
 .blog__sidebar__search {
@@ -2613,7 +2613,7 @@ ol {
 }
 
 .blog__details__widget .blog__details__social a:hover {
-	color: #7fad39;
+	color: var(--darkblue);
 }
 
 .blog__details__widget .blog__details__social a:last-child {
@@ -2731,7 +2731,7 @@ ol {
 }
 
 .footer__widget .footer__widget__social a:hover {
-	background: #7fad39;
+	background: var(--darkblue);
 	color: #ffffff;
 	border-color: #ffffff;
 }
@@ -2769,7 +2769,7 @@ ol {
 
 .contact__widget span {
 	font-size: 36px;
-	color: #7fad39;
+	color: var(--darkblue);
 }
 
 .contact__widget h4 {
@@ -2808,7 +2808,7 @@ ol {
 
 .map .map-inside i {
 	font-size: 48px;
-	color: #7fad39;
+	color: var(--darkblue);
 	position: absolute;
 	bottom: -75px;
 	left: 50%;
@@ -3065,7 +3065,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: var(--darkblue);
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3131,7 +3131,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: var(--darkblue);
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -3323,7 +3323,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: var(--darkblue);
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3389,7 +3389,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: var(--darkblue);
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
