style : change logo, place holder
푸터와 네브바에 로고를 바꾸었고,
문의하기 페이지에서 로그인을 하지 않았을 경우 나오는 메세지를 수정했다.

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,8 +4,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__about__logo">
-              <a href="./index.html"><img src="img/logo.png" alt=""></a>
-            </div>
+              <a th:href="@{/}"><img src="img/logo1.png" alt=""></a>          </div>
             <ul>
               <li>Address: 60-49 Road 11378 New York</li>
               <li>Phone: +65 11.188.888</li>
