--- a/src/main/resources/templates/inquire.html
+++ b/src/main/resources/templates/inquire.html
@@ -92,7 +92,7 @@
             <div class="row">
               <div class="col-md-12 form-group mb-3">
                 <label for="" class="col-form-label">Email</label>
-                <input type="email" class="form-control bottom-border" name="email" id="email" placeholder="Your email" disabled value="pls login">
+                <input type="email" class="form-control bottom-border" name="email" id="email" placeholder="Your email" disabled value="Please login first">
               </div>
             </div>
 
@@ -100,7 +100,7 @@
               <div class="col-md-12 form-group mb-3">
                 <label for="budget" class="col-form-label">Subject</label>
                 <input type="text" class="form-control bottom-border" name="subject" id="subject"
-                  placeholder="pls login" disabled>
+                  placeholder="Please login first" disabled>
               </div>
             </div>
 
@@ -108,7 +108,7 @@
               <div class="col-md-12 form-group mb-3">
                 <label for="message" class="col-form-label">Message</label>
                 <textarea class="form-control bottom-border" name="content" id="message" cols="30" rows="4"
-                  placeholder="pls login" disabled></textarea>
+                  placeholder="Please login first" disabled></textarea>
               </div>
             </div>
             <div class="row justify-content-center">
