--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -7,8 +7,8 @@
   <!-- Humberger Begin -->
   <div class="humberger__menu__overlay"></div>
   <div class="humberger__menu__wrapper">
-    <div class="humberger__menu__logo">
-      <a href="#"><img src="/img/logo.png" alt=""></a>
+    <div class="humberger__menu__logo"> 
+      <a href="#" class="h-50"><img src="/img/logo1.png"></a>
     </div>
     <div class="humberger__menu__cart">
       <ul>
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="header__logo">
-            <a th:href="@{/}"><img src="/img/logo.png" alt=""></a>
+            <a th:href="@{/}"><img src="/img/logo1.png" alt=""></a>
           </div>
         </div>
         <div class="col-lg-6">
