--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -8,7 +8,7 @@
   <div class="humberger__menu__overlay"></div>
   <div class="humberger__menu__wrapper">
     <div class="humberger__menu__logo"> 
-      <a href="#" class="h-50"><img src="/img/logo1.png"></a>
+      <a href="#"><img src="/img/logo1.png" class="height-50"></a>
     </div>
     <div class="humberger__menu__cart">
       <ul>
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="header__logo">
-            <a th:href="@{/}"><img src="/img/logo1.png" alt=""></a>
+            <a th:href="@{/}"><img src="/img/logo1.png" alt="" class="height-50"></a>
           </div>
         </div>
         <div class="col-lg-6">
