style : resolve the a tag hover is going to white
a 태크 호버가 흰색되는 거 메인 색상으로 바꿈

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,6 +6,13 @@
 
   <!-- Main css -->
   <link rel="stylesheet" href="../css/RLstyle.css">
+  <style>
+    a.signup-image-link:hover, a.term-service:hover {
+      transition: 0.3s;
+      color: #1D5B94;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <!-- Sign up form -->
 <section layout:fragment="content" class="signup">
