--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -20,27 +20,28 @@
     <div class="signup-content">
       <div class="signup-form">
         <h2 class="form-title">Sign up</h2>
-        <form method="POST" class="register-form" id="register-form">
+        <form th:action="@{/siteuser/register}" th:object="${registerUserForm}" method="POST" class="register-form" id="register-form">
+          <div th:replace="~{form-errors :: formErrorsFragment}"></div>
           <div class="form-group">
             <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-            <input type="text" name="name" id="name" placeholder="Your Name" />
+            <input th:field="*{username}" type="text" name="name" id="name" placeholder="Your Name" />
           </div>
           <div class="form-group">
             <label for="email"><i class="zmdi zmdi-email"></i></label>
-            <input type="email" name="email" id="email" placeholder="Your Email" />
+            <input th:field="*{email}" type="email" name="email" id="email" placeholder="Your Email" />
           </div>
           <div class="form-group">
             <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-            <input type="password" name="pass" id="pass" placeholder="Password" />
+            <input th:field="*{password1}" type="password" name="pass" id="pass" placeholder="Password" />
           </div>
           <div class="form-group">
             <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-            <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" />
+            <input th:field="*{password2}" type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" />
           </div>
           <div class="form-group">
             <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
             <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in <a
-                href="#" class="term-service">Terms of service</a></label>
+              href="#" class="term-service">Terms of service</a></label>
           </div>
           <div class="form-group form-button">
             <input type="submit" name="signup" id="signup" class="form-submit" value="Register" />
