--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,18 +26,18 @@
       </div>
 
       <div class="signin-form">
-        <h2 class="form-title">Sign up</h2>
+        <h2 class="form-title">Sign in</h2>
         <form th:action="@{/siteuser/login}" method="POST" class="register-form" id="login-form">
           <div th:if="${param.error}">
             <div class="alert alert-danger" role="alert">Invalid username and password.</div>
           </div>
           <div class="form-group">
             <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-            <input type="text" name="your_name" id="your_name" placeholder="Your Name" />
+            <input type="text" name="username" id="your_name" placeholder="Your Name" />
           </div>
           <div class="form-group">
             <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-            <input type="password" name="your_pass" id="your_pass" placeholder="Password" />
+            <input type="password" name="password" id="your_pass" placeholder="Password" />
           </div>
           <div class="form-group">
             <!-- <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
