--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -50,7 +50,7 @@
       </div>
       <div class="signup-image">
         <figure><img src="../img/signup-image.jpg" alt="sing up image"></figure>
-        <a href="#" class="signup-image-link">I am already member</a>
+        <a th:href="@{/siteuser/login}" class="signup-image-link">I am already member</a>
       </div>
     </div>
   </div>
