--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,7 +4,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__about__logo">
-              <a th:href="@{/}"><img src="img/logo1.png" alt=""></a>          </div>
+              <a th:href="@{/}"><img src="/img/logo1.png" alt=""></a>          </div>
             <ul>
               <li>Address: 60-49 Road 11378 New York</li>
               <li>Phone: +65 11.188.888</li>
@@ -62,7 +62,7 @@
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
-            <div class="footer__copyright__payment"><img src="img/payment-item.png" alt=""></div>
+            <div class="footer__copyright__payment"><img src="/img/payment-item.png" alt=""></div>
           </div>
         </div>
       </div>
