--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -2,12 +2,12 @@
 <section layout:fragment="content">
 
 
-  <form action="">
-    <input type="text">obj
-    <input type="text">mtl
-    <input type="text">bd
-    <input type="text">images
-    <input type="submit" value="">
+  <form th:action="@{/api/assets/upload}" method="POST" enctype="multipart/form-data">
+    <input type="text" name="obj">obj
+    <input type="text" name="mlt">mtl
+    <input type="text" name="bd">bd
+    <input type="file" name="files" multiple>images
+    <input type="submit" value="send">
   </form>
 
 
