feat : add function submit
유니티에서 웹 빌드 한 것에 웹 인풋 태그에 submit을 해주는 함수 만들었습니다.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,12 +42,14 @@ body {
 #unity-container.unity-mobile {
 	position: fixed;
 	width: 100%;
-	height: 100%;
+	aspect-ratio: 16 / 9;
 	background-color: var(--darkblue);
 }
 
 #unity-canvas {
-	background: #231F20
+	background: var(--darkblue);
+	width: 100%;
+	aspect-ratio: 16 / 7;
 }
 
 .unity-mobile #unity-canvas {
@@ -107,13 +109,13 @@ body {
 	font-size: 18px
 }
 
-#unity-fullscreen-button {
+/* #unity-fullscreen-button {
 	cursor: pointer;
 	float: right;
 	width: 38px;
 	height: 38px;
 	background: url('/TemplateData/fullscreen-button.png') no-repeat center
-}
+} */
 
 #unity-warning {
 	position: absolute;
