style : change model size
모델 사이즈와 layout:decorate를 푸터가 없는 레이아웃으로 바꿨음
에셋 제작 페이지에서 사용할 스타일도 추가함

--- a/src/main/resources/templates/CreateAsset.html
+++ b/src/main/resources/templates/CreateAsset.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{layout}">
+<html layout:decorate="~{layout-noFooter}">
 <div layout:fragment="content">
   <div th:replace="~{model-create :: model-createfragment}"></div>
 </div>
