test : add button that send lab and create asset page
테스트 공간으로 가는 버튼 및 에셋 제작 페이지로 가는 버튼 navbar에 추가

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -94,8 +94,8 @@
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
-                  <li><a href="#">Korean</a></li>
-                  <li><a href="#">English</a></li>
+                  <li><a th:href="@{/api/assets/create}">Korean</a></li>
+                  <li><a th:href="@{/test/lab}">English</a></li>
                 </ul>
               </div>
               <div class="header__top__right__auth" sec:authorize="isAnonymous()">
