refactor : separate unity build script
 model-create.html안에 있던 유니티 웹 빌드 스크립트를 js폴더 안에 있는 unity.js로 옮겼다.

--- a/src/main/resources/templates/CreateAsset.html
+++ b/src/main/resources/templates/CreateAsset.html
@@ -1,5 +1,5 @@
 <html layout:decorate="~{layout-noFooter}">
 <div layout:fragment="content">
   <div th:replace="~{model-create :: model-createfragment}"></div>
-</div>
+</div><script src="/js/unity.js" layout:fragment="script"></script>
 </html>
