--- a/src/main/resources/templates/CreateAsset.html
+++ b/src/main/resources/templates/CreateAsset.html
@@ -2,4 +2,5 @@
 <div layout:fragment="content">
   <div th:replace="~{model-create :: model-createfragment}"></div>
 </div>
+<script layout:fragment="script" src="/js/unity.js"></script>
 </html>
